# remote-agents

./: .gitignore  DEPLOY.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  repos.py  sessions.py  ws.py
backend/app/rpc/: agent_process.py  framing.py  types.py
backend/app/sessions/: cold.py  registry.py  sidecar.py
backend/docs/: manual-smoke.md
backend/tests/: conftest.py  fake_pi.py
backend/tests/integration/: test_agent_process.py  test_backpressure.py  test_boundaries.py  test_edge_cases.py  test_full_flow.py  test_registry.py  test_repos.py  test_sessions_api.py  test_ws.py  test_ws_concurrency.py
backend/tests/unit/: test_cold.py  test_config.py  test_framing.py  test_health.py  test_sidecar.py  test_types.py
deploy/: Caddyfile  remote-agents.service  setup.sh
docs/: 00-patterns.md  01-usecases.md  02-architecture.md  03-build-plan.md  SESSION-019EE709-SUMMARY.md  debug-session-019ee709.md
frontend/: index.html  svelte.config.js  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/components/: MessageBubble.svelte  SessionView.svelte  SessionsView.svelte
frontend/src/lib/repositories/: api.repository.ts  ws.repository.ts
frontend/src/lib/stores/: session.svelte.ts  sessions.svelte.ts
frontend/src/lib/types/: index.ts
frontend/static/: manifest.webmanifest
